--- a/sendigo-client-side/package.json
+++ b/sendigo-client-side/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "aos": "^2.3.4",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
